@@ -1,3 +1,9 @@
+2011-03-05  Alan Modra  <amodra@gmail.com>
+
+	PR target/47986
+	* config/rs6000/rs6000.c (rs6000_delegitimize_address): Handle
+	full cmodel medium/large lo_sum + high addresses.
+
 2011-02-03  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	Backport from mainline:
